// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accordion-container applies correct text size class from contentTxtSize prop: text size large 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="accordion" id="acc-6-06yq9">
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-6-06yq9-header-0">
        <button-component aria-controls="acc-6-06yq9-collapse-0" aria-expanded="true" data-bs-target="#acc-6-06yq9-collapse-0" data-bs-toggle="collapse" id="acc-6-06yq9-trigger-0">
          <!---->
          <button aria-controls="acc-6-06yq9-collapse-0" aria-expanded="true" aria-label="Button" class="accordion-button btn" data-bs-target="#acc-6-06yq9-collapse-0" data-bs-toggle="collapse" type="button">
            <span class="btn__content">
              Header 1
              <span aria-hidden="true" class="rotate-down">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-6-06yq9-trigger-0" class="accordion-collapse collapse" id="acc-6-06yq9-collapse-0" role="region" style="overflow: hidden; transition: height 0.35s ease; display: block; height: auto;">
        <div class="accordion-body text-large">
          Content 1
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-6-06yq9-header-1">
        <button-component aria-controls="acc-6-06yq9-collapse-1" aria-expanded="false" data-bs-target="#acc-6-06yq9-collapse-1" data-bs-toggle="collapse" id="acc-6-06yq9-trigger-1">
          <!---->
          <button aria-controls="acc-6-06yq9-collapse-1" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-6-06yq9-collapse-1" data-bs-toggle="collapse" type="button">
            <span class="btn__content">
              Header 2
              <span aria-hidden="true" class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-hidden="true" aria-labelledby="acc-6-06yq9-trigger-1" class="accordion-collapse collapse" hidden="" id="acc-6-06yq9-collapse-1" inert="" role="region" style="overflow: hidden; transition: height 0.35s ease; display: none; height: 0px;">
        <div class="accordion-body text-large">
          Content 2
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container handles keyboard activation (simulate click on inner button): after activation close 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="accordion" id="acc-4-geb0l">
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-4-geb0l-header-0">
        <button-component aria-controls="acc-4-geb0l-collapse-0" aria-expanded="false" data-bs-target="#acc-4-geb0l-collapse-0" data-bs-toggle="collapse" id="acc-4-geb0l-trigger-0">
          <!---->
          <button aria-controls="acc-4-geb0l-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-4-geb0l-collapse-0" data-bs-toggle="collapse" type="button">
            <span class="btn__content">
              Header 1
              <span aria-hidden="true" class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-hidden="true" aria-labelledby="acc-4-geb0l-trigger-0" class="accordion-collapse collapse" hidden="" id="acc-4-geb0l-collapse-0" inert="" role="region" style="overflow: hidden; transition: height 0.35s ease; display: none; height: 0px;">
        <div class="accordion-body">
          Content 1
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-4-geb0l-header-1">
        <button-component aria-controls="acc-4-geb0l-collapse-1" aria-expanded="false" data-bs-target="#acc-4-geb0l-collapse-1" data-bs-toggle="collapse" id="acc-4-geb0l-trigger-1">
          <!---->
          <button aria-controls="acc-4-geb0l-collapse-1" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-4-geb0l-collapse-1" data-bs-toggle="collapse" type="button">
            <span class="btn__content">
              Header 2
              <span aria-hidden="true" class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-hidden="true" aria-labelledby="acc-4-geb0l-trigger-1" class="accordion-collapse collapse" hidden="" id="acc-4-geb0l-collapse-1" inert="" role="region" style="overflow: hidden; transition: height 0.35s ease; display: none; height: 0px;">
        <div class="accordion-body">
          Content 2
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container handles keyboard activation (simulate click on inner button): after activation open 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="accordion" id="acc-4-geb0l">
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-4-geb0l-header-0">
        <button-component aria-controls="acc-4-geb0l-collapse-0" aria-expanded="true" data-bs-target="#acc-4-geb0l-collapse-0" data-bs-toggle="collapse" id="acc-4-geb0l-trigger-0">
          <!---->
          <button aria-controls="acc-4-geb0l-collapse-0" aria-expanded="true" aria-label="Button" class="accordion-button btn" data-bs-target="#acc-4-geb0l-collapse-0" data-bs-toggle="collapse" type="button">
            <span class="btn__content">
              Header 1
              <span aria-hidden="true" class="rotate-down">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-4-geb0l-trigger-0" class="accordion-collapse collapse" id="acc-4-geb0l-collapse-0" role="region" style="overflow: hidden; transition: height 0.35s ease; display: block; height: auto;">
        <div class="accordion-body">
          Content 1
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-4-geb0l-header-1">
        <button-component aria-controls="acc-4-geb0l-collapse-1" aria-expanded="false" data-bs-target="#acc-4-geb0l-collapse-1" data-bs-toggle="collapse" id="acc-4-geb0l-trigger-1">
          <!---->
          <button aria-controls="acc-4-geb0l-collapse-1" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-4-geb0l-collapse-1" data-bs-toggle="collapse" type="button">
            <span class="btn__content">
              Header 2
              <span aria-hidden="true" class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-hidden="true" aria-labelledby="acc-4-geb0l-trigger-1" class="accordion-collapse collapse" hidden="" id="acc-4-geb0l-collapse-1" inert="" role="region" style="overflow: hidden; transition: height 0.35s ease; display: none; height: 0px;">
        <div class="accordion-body">
          Content 2
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container icon switching with snapshot: after icon toggle 1`] = `
<accordion-container icon="icon-closed,icon-open">
  <div class="accordion" id="acc-5-5x1kx">
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-5-5x1kx-header-0">
        <button-component aria-controls="acc-5-5x1kx-collapse-0" aria-expanded="true" data-bs-target="#acc-5-5x1kx-collapse-0" data-bs-toggle="collapse" id="acc-5-5x1kx-trigger-0">
          <!---->
          <button aria-controls="acc-5-5x1kx-collapse-0" aria-expanded="true" aria-label="Button" class="accordion-button btn" data-bs-target="#acc-5-5x1kx-collapse-0" data-bs-toggle="collapse" type="button">
            <span class="btn__content">
              Header 1
              <span aria-hidden="true" class="rotate-down">
                <icon-component icon="icon-open"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-5-5x1kx-trigger-0" class="accordion-collapse collapse" id="acc-5-5x1kx-collapse-0" role="region" style="overflow: hidden; transition: height 0.35s ease; display: block; height: auto;">
        <div class="accordion-body">
          Content 1
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-5-5x1kx-header-1">
        <button-component aria-controls="acc-5-5x1kx-collapse-1" aria-expanded="false" data-bs-target="#acc-5-5x1kx-collapse-1" data-bs-toggle="collapse" id="acc-5-5x1kx-trigger-1">
          <!---->
          <button aria-controls="acc-5-5x1kx-collapse-1" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-5-5x1kx-collapse-1" data-bs-toggle="collapse" type="button">
            <span class="btn__content">
              Header 2
              <span aria-hidden="true" class="rotate-up">
                <icon-component icon="icon-closed"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-hidden="true" aria-labelledby="acc-5-5x1kx-trigger-1" class="accordion-collapse collapse" hidden="" id="acc-5-5x1kx-collapse-1" inert="" role="region" style="overflow: hidden; transition: height 0.35s ease; display: none; height: 0px;">
        <div class="accordion-body">
          Content 2
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container icon switching with snapshot: before icon toggle 1`] = `
<accordion-container icon="icon-closed,icon-open">
  <div class="accordion" id="acc-5-5x1kx">
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-5-5x1kx-header-0">
        <button-component aria-controls="acc-5-5x1kx-collapse-0" aria-expanded="false" data-bs-target="#acc-5-5x1kx-collapse-0" data-bs-toggle="collapse" id="acc-5-5x1kx-trigger-0">
          <!---->
          <button aria-controls="acc-5-5x1kx-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-5-5x1kx-collapse-0" data-bs-toggle="collapse" type="button">
            <span class="btn__content">
              Header 1
              <span aria-hidden="true" class="rotate-up">
                <icon-component icon="icon-closed"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-hidden="true" aria-labelledby="acc-5-5x1kx-trigger-0" class="accordion-collapse collapse" hidden="" id="acc-5-5x1kx-collapse-0" inert="" role="region" style="overflow: hidden; transition: height 0.35s ease; display: none; height: 0px;">
        <div class="accordion-body">
          Content 1
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-5-5x1kx-header-1">
        <button-component aria-controls="acc-5-5x1kx-collapse-1" aria-expanded="false" data-bs-target="#acc-5-5x1kx-collapse-1" data-bs-toggle="collapse" id="acc-5-5x1kx-trigger-1">
          <!---->
          <button aria-controls="acc-5-5x1kx-collapse-1" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-5-5x1kx-collapse-1" data-bs-toggle="collapse" type="button">
            <span class="btn__content">
              Header 2
              <span aria-hidden="true" class="rotate-up">
                <icon-component icon="icon-closed"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-hidden="true" aria-labelledby="acc-5-5x1kx-trigger-1" class="accordion-collapse collapse" hidden="" id="acc-5-5x1kx-collapse-1" inert="" role="region" style="overflow: hidden; transition: height 0.35s ease; display: none; height: 0px;">
        <div class="accordion-body">
          Content 2
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders an item with empty header and content strings: empty header and content 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="accordion" id="acc-16-janj0">
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-16-janj0-header-0">
        <button-component aria-controls="acc-16-janj0-collapse-0" aria-expanded="false" data-bs-target="#acc-16-janj0-collapse-0" data-bs-toggle="collapse" id="acc-16-janj0-trigger-0">
          <!---->
          <button aria-controls="acc-16-janj0-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-16-janj0-collapse-0" data-bs-toggle="collapse" type="button">
            <span class="btn__content">
              <span aria-hidden="true" class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-hidden="true" aria-labelledby="acc-16-janj0-trigger-0" class="accordion-collapse collapse" hidden="" id="acc-16-janj0-collapse-0" inert="" role="region" style="overflow: hidden; transition: height 0.35s ease; display: none; height: 0px;">
        <div class="accordion-body"></div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders correct ARIA attributes on accordion headers and panels (including hidden/inert when collapsed): ARIA attributes check 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="accordion" id="my-accordion">
    <div class="accordion-item">
      <h2 class="accordion-header" id="my-accordion-header-0">
        <button-component aria-controls="my-accordion-collapse-0" aria-expanded="false" data-bs-target="#my-accordion-collapse-0" data-bs-toggle="collapse" id="my-accordion-trigger-0">
          <!---->
          <button aria-controls="my-accordion-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#my-accordion-collapse-0" data-bs-toggle="collapse" type="button">
            <span class="btn__content">
              Item 1
              <span aria-hidden="true" class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-hidden="true" aria-labelledby="my-accordion-trigger-0" class="accordion-collapse collapse" hidden="" id="my-accordion-collapse-0" inert="" role="region" style="overflow: hidden; transition: height 0.35s ease; display: none; height: 0px;">
        <div class="accordion-body">
          Content 1
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders empty accordion when data is an empty array: empty array data 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="accordion" id="acc-13-n0myz"></div>
</accordion-container>
`;

exports[`accordion-container renders fallback icon behavior for invalid or missing icon prop: empty string icon 1`] = `
<accordion-container icon="">
  <div class="accordion" id="acc-17-6a2a6">
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-17-6a2a6-header-0">
        <button-component aria-controls="acc-17-6a2a6-collapse-0" aria-expanded="false" data-bs-target="#acc-17-6a2a6-collapse-0" data-bs-toggle="collapse" id="acc-17-6a2a6-trigger-0">
          <!---->
          <button aria-controls="acc-17-6a2a6-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-17-6a2a6-collapse-0" data-bs-toggle="collapse" type="button">
            <span class="btn__content">
              H
              <span aria-hidden="true" class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-hidden="true" aria-labelledby="acc-17-6a2a6-trigger-0" class="accordion-collapse collapse" hidden="" id="acc-17-6a2a6-collapse-0" inert="" role="region" style="overflow: hidden; transition: height 0.35s ease; display: none; height: 0px;">
        <div class="accordion-body">
          C
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders fallback icon behavior for invalid or missing icon prop: malformed icon string 1`] = `
<accordion-container icon="  , , ,">
  <div class="accordion" id="acc-19-dp9c5">
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-19-dp9c5-header-0">
        <button-component aria-controls="acc-19-dp9c5-collapse-0" aria-expanded="false" data-bs-target="#acc-19-dp9c5-collapse-0" data-bs-toggle="collapse" id="acc-19-dp9c5-trigger-0">
          <!---->
          <button aria-controls="acc-19-dp9c5-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-19-dp9c5-collapse-0" data-bs-toggle="collapse" type="button">
            <span class="btn__content">
              H
              <span aria-hidden="true" class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-hidden="true" aria-labelledby="acc-19-dp9c5-trigger-0" class="accordion-collapse collapse" hidden="" id="acc-19-dp9c5-collapse-0" inert="" role="region" style="overflow: hidden; transition: height 0.35s ease; display: none; height: 0px;">
        <div class="accordion-body">
          C
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders fallback icon behavior for invalid or missing icon prop: null icon 1`] = `
<accordion-container>
  <div class="accordion" id="acc-18-79mdr">
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-18-79mdr-header-0">
        <button-component aria-controls="acc-18-79mdr-collapse-0" aria-expanded="false" data-bs-target="#acc-18-79mdr-collapse-0" data-bs-toggle="collapse" id="acc-18-79mdr-trigger-0">
          <!---->
          <button aria-controls="acc-18-79mdr-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-18-79mdr-collapse-0" data-bs-toggle="collapse" type="button">
            <span class="btn__content">
              H
              <span aria-hidden="true" class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-hidden="true" aria-labelledby="acc-18-79mdr-trigger-0" class="accordion-collapse collapse" hidden="" id="acc-18-79mdr-collapse-0" inert="" role="region" style="overflow: hidden; transition: height 0.35s ease; display: none; height: 0px;">
        <div class="accordion-body">
          C
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders gracefully when data is undefined, null, or not an array: non-array data fallback 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="accordion" id="acc-10-khehz"></div>
</accordion-container>
`;

exports[`accordion-container renders gracefully when data is undefined, null, or not an array: null data fallback 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="accordion" id="acc-9-cd7mz"></div>
</accordion-container>
`;

exports[`accordion-container renders gracefully when data is undefined, null, or not an array: undefined data fallback 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="accordion" id="acc-8-5qgi3"></div>
</accordion-container>
`;

exports[`accordion-container renders many accordion items and matches snapshot: long data array (12 items) 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="accordion" id="acc-15-i122b">
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-15-i122b-header-0">
        <button-component aria-controls="acc-15-i122b-collapse-0" aria-expanded="false" data-bs-target="#acc-15-i122b-collapse-0" data-bs-toggle="collapse" id="acc-15-i122b-trigger-0">
          <!---->
          <button aria-controls="acc-15-i122b-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-15-i122b-collapse-0" data-bs-toggle="collapse" type="button">
            <span class="btn__content">
              Header 1
              <span aria-hidden="true" class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-hidden="true" aria-labelledby="acc-15-i122b-trigger-0" class="accordion-collapse collapse" hidden="" id="acc-15-i122b-collapse-0" inert="" role="region" style="overflow: hidden; transition: height 0.35s ease; display: none; height: 0px;">
        <div class="accordion-body">
          Content 1
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-15-i122b-header-1">
        <button-component aria-controls="acc-15-i122b-collapse-1" aria-expanded="false" data-bs-target="#acc-15-i122b-collapse-1" data-bs-toggle="collapse" id="acc-15-i122b-trigger-1">
          <!---->
          <button aria-controls="acc-15-i122b-collapse-1" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-15-i122b-collapse-1" data-bs-toggle="collapse" type="button">
            <span class="btn__content">
              Header 2
              <span aria-hidden="true" class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-hidden="true" aria-labelledby="acc-15-i122b-trigger-1" class="accordion-collapse collapse" hidden="" id="acc-15-i122b-collapse-1" inert="" role="region" style="overflow: hidden; transition: height 0.35s ease; display: none; height: 0px;">
        <div class="accordion-body">
          Content 2
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-15-i122b-header-2">
        <button-component aria-controls="acc-15-i122b-collapse-2" aria-expanded="false" data-bs-target="#acc-15-i122b-collapse-2" data-bs-toggle="collapse" id="acc-15-i122b-trigger-2">
          <!---->
          <button aria-controls="acc-15-i122b-collapse-2" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-15-i122b-collapse-2" data-bs-toggle="collapse" type="button">
            <span class="btn__content">
              Header 3
              <span aria-hidden="true" class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-hidden="true" aria-labelledby="acc-15-i122b-trigger-2" class="accordion-collapse collapse" hidden="" id="acc-15-i122b-collapse-2" inert="" role="region" style="overflow: hidden; transition: height 0.35s ease; display: none; height: 0px;">
        <div class="accordion-body">
          Content 3
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-15-i122b-header-3">
        <button-component aria-controls="acc-15-i122b-collapse-3" aria-expanded="false" data-bs-target="#acc-15-i122b-collapse-3" data-bs-toggle="collapse" id="acc-15-i122b-trigger-3">
          <!---->
          <button aria-controls="acc-15-i122b-collapse-3" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-15-i122b-collapse-3" data-bs-toggle="collapse" type="button">
            <span class="btn__content">
              Header 4
              <span aria-hidden="true" class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-hidden="true" aria-labelledby="acc-15-i122b-trigger-3" class="accordion-collapse collapse" hidden="" id="acc-15-i122b-collapse-3" inert="" role="region" style="overflow: hidden; transition: height 0.35s ease; display: none; height: 0px;">
        <div class="accordion-body">
          Content 4
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-15-i122b-header-4">
        <button-component aria-controls="acc-15-i122b-collapse-4" aria-expanded="false" data-bs-target="#acc-15-i122b-collapse-4" data-bs-toggle="collapse" id="acc-15-i122b-trigger-4">
          <!---->
          <button aria-controls="acc-15-i122b-collapse-4" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-15-i122b-collapse-4" data-bs-toggle="collapse" type="button">
            <span class="btn__content">
              Header 5
              <span aria-hidden="true" class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-hidden="true" aria-labelledby="acc-15-i122b-trigger-4" class="accordion-collapse collapse" hidden="" id="acc-15-i122b-collapse-4" inert="" role="region" style="overflow: hidden; transition: height 0.35s ease; display: none; height: 0px;">
        <div class="accordion-body">
          Content 5
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-15-i122b-header-5">
        <button-component aria-controls="acc-15-i122b-collapse-5" aria-expanded="false" data-bs-target="#acc-15-i122b-collapse-5" data-bs-toggle="collapse" id="acc-15-i122b-trigger-5">
          <!---->
          <button aria-controls="acc-15-i122b-collapse-5" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-15-i122b-collapse-5" data-bs-toggle="collapse" type="button">
            <span class="btn__content">
              Header 6
              <span aria-hidden="true" class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-hidden="true" aria-labelledby="acc-15-i122b-trigger-5" class="accordion-collapse collapse" hidden="" id="acc-15-i122b-collapse-5" inert="" role="region" style="overflow: hidden; transition: height 0.35s ease; display: none; height: 0px;">
        <div class="accordion-body">
          Content 6
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-15-i122b-header-6">
        <button-component aria-controls="acc-15-i122b-collapse-6" aria-expanded="false" data-bs-target="#acc-15-i122b-collapse-6" data-bs-toggle="collapse" id="acc-15-i122b-trigger-6">
          <!---->
          <button aria-controls="acc-15-i122b-collapse-6" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-15-i122b-collapse-6" data-bs-toggle="collapse" type="button">
            <span class="btn__content">
              Header 7
              <span aria-hidden="true" class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-hidden="true" aria-labelledby="acc-15-i122b-trigger-6" class="accordion-collapse collapse" hidden="" id="acc-15-i122b-collapse-6" inert="" role="region" style="overflow: hidden; transition: height 0.35s ease; display: none; height: 0px;">
        <div class="accordion-body">
          Content 7
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-15-i122b-header-7">
        <button-component aria-controls="acc-15-i122b-collapse-7" aria-expanded="false" data-bs-target="#acc-15-i122b-collapse-7" data-bs-toggle="collapse" id="acc-15-i122b-trigger-7">
          <!---->
          <button aria-controls="acc-15-i122b-collapse-7" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-15-i122b-collapse-7" data-bs-toggle="collapse" type="button">
            <span class="btn__content">
              Header 8
              <span aria-hidden="true" class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-hidden="true" aria-labelledby="acc-15-i122b-trigger-7" class="accordion-collapse collapse" hidden="" id="acc-15-i122b-collapse-7" inert="" role="region" style="overflow: hidden; transition: height 0.35s ease; display: none; height: 0px;">
        <div class="accordion-body">
          Content 8
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-15-i122b-header-8">
        <button-component aria-controls="acc-15-i122b-collapse-8" aria-expanded="false" data-bs-target="#acc-15-i122b-collapse-8" data-bs-toggle="collapse" id="acc-15-i122b-trigger-8">
          <!---->
          <button aria-controls="acc-15-i122b-collapse-8" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-15-i122b-collapse-8" data-bs-toggle="collapse" type="button">
            <span class="btn__content">
              Header 9
              <span aria-hidden="true" class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-hidden="true" aria-labelledby="acc-15-i122b-trigger-8" class="accordion-collapse collapse" hidden="" id="acc-15-i122b-collapse-8" inert="" role="region" style="overflow: hidden; transition: height 0.35s ease; display: none; height: 0px;">
        <div class="accordion-body">
          Content 9
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-15-i122b-header-9">
        <button-component aria-controls="acc-15-i122b-collapse-9" aria-expanded="false" data-bs-target="#acc-15-i122b-collapse-9" data-bs-toggle="collapse" id="acc-15-i122b-trigger-9">
          <!---->
          <button aria-controls="acc-15-i122b-collapse-9" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-15-i122b-collapse-9" data-bs-toggle="collapse" type="button">
            <span class="btn__content">
              Header 10
              <span aria-hidden="true" class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-hidden="true" aria-labelledby="acc-15-i122b-trigger-9" class="accordion-collapse collapse" hidden="" id="acc-15-i122b-collapse-9" inert="" role="region" style="overflow: hidden; transition: height 0.35s ease; display: none; height: 0px;">
        <div class="accordion-body">
          Content 10
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-15-i122b-header-10">
        <button-component aria-controls="acc-15-i122b-collapse-10" aria-expanded="false" data-bs-target="#acc-15-i122b-collapse-10" data-bs-toggle="collapse" id="acc-15-i122b-trigger-10">
          <!---->
          <button aria-controls="acc-15-i122b-collapse-10" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-15-i122b-collapse-10" data-bs-toggle="collapse" type="button">
            <span class="btn__content">
              Header 11
              <span aria-hidden="true" class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-hidden="true" aria-labelledby="acc-15-i122b-trigger-10" class="accordion-collapse collapse" hidden="" id="acc-15-i122b-collapse-10" inert="" role="region" style="overflow: hidden; transition: height 0.35s ease; display: none; height: 0px;">
        <div class="accordion-body">
          Content 11
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-15-i122b-header-11">
        <button-component aria-controls="acc-15-i122b-collapse-11" aria-expanded="false" data-bs-target="#acc-15-i122b-collapse-11" data-bs-toggle="collapse" id="acc-15-i122b-trigger-11">
          <!---->
          <button aria-controls="acc-15-i122b-collapse-11" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-15-i122b-collapse-11" data-bs-toggle="collapse" type="button">
            <span class="btn__content">
              Header 12
              <span aria-hidden="true" class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-hidden="true" aria-labelledby="acc-15-i122b-trigger-11" class="accordion-collapse collapse" hidden="" id="acc-15-i122b-collapse-11" inert="" role="region" style="overflow: hidden; transition: height 0.35s ease; display: none; height: 0px;">
        <div class="accordion-body">
          Content 12
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders only first two icons from icon="a,b,c": icon prop with extra values (a,b,c) 1`] = `
<accordion-container icon="a,b,c">
  <div class="accordion" id="acc-21-jf4do">
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-21-jf4do-header-0">
        <button-component aria-controls="acc-21-jf4do-collapse-0" aria-expanded="false" data-bs-target="#acc-21-jf4do-collapse-0" data-bs-toggle="collapse" id="acc-21-jf4do-trigger-0">
          <!---->
          <button aria-controls="acc-21-jf4do-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-21-jf4do-collapse-0" data-bs-toggle="collapse" type="button">
            <span class="btn__content">
              H
              <span aria-hidden="true" class="rotate-up">
                <icon-component icon="a"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-hidden="true" aria-labelledby="acc-21-jf4do-trigger-0" class="accordion-collapse collapse" hidden="" id="acc-21-jf4do-collapse-0" inert="" role="region" style="overflow: hidden; transition: height 0.35s ease; display: none; height: 0px;">
        <div class="accordion-body">
          C
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders outlined, block, and disabled props: outlined-block-disabled 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="accordion" id="acc-2-kejpf">
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-2-kejpf-header-0">
        <button-component aria-controls="acc-2-kejpf-collapse-0" aria-expanded="false" data-bs-target="#acc-2-kejpf-collapse-0" data-bs-toggle="collapse" id="acc-2-kejpf-trigger-0">
          <!---->
          <button aria-controls="acc-2-kejpf-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn btn--block btn-outline- collapsed" data-bs-target="#acc-2-kejpf-collapse-0" data-bs-toggle="collapse" disabled="" type="button">
            <span class="btn__content">
              Header 1
              <span aria-hidden="true" class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-hidden="true" aria-labelledby="acc-2-kejpf-trigger-0" class="accordion-collapse collapse" hidden="" id="acc-2-kejpf-collapse-0" inert="" role="region" style="overflow: hidden; transition: height 0.35s ease; display: none; height: 0px;">
        <div class="accordion-body">
          Content 1
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-2-kejpf-header-1">
        <button-component aria-controls="acc-2-kejpf-collapse-1" aria-expanded="false" data-bs-target="#acc-2-kejpf-collapse-1" data-bs-toggle="collapse" id="acc-2-kejpf-trigger-1">
          <!---->
          <button aria-controls="acc-2-kejpf-collapse-1" aria-expanded="false" aria-label="Button" class="accordion-button btn btn--block btn-outline- collapsed" data-bs-target="#acc-2-kejpf-collapse-1" data-bs-toggle="collapse" disabled="" type="button">
            <span class="btn__content">
              Header 2
              <span aria-hidden="true" class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-hidden="true" aria-labelledby="acc-2-kejpf-trigger-1" class="accordion-collapse collapse" hidden="" id="acc-2-kejpf-collapse-1" inert="" role="region" style="overflow: hidden; transition: height 0.35s ease; display: none; height: 0px;">
        <div class="accordion-body">
          Content 2
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders single static icon and does not change on toggle: static single icon toggle does not change 1`] = `
<accordion-container icon="only-icon">
  <div class="accordion" id="acc-22-i9xpp">
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-22-i9xpp-header-0">
        <button-component aria-controls="acc-22-i9xpp-collapse-0" aria-expanded="false" data-bs-target="#acc-22-i9xpp-collapse-0" data-bs-toggle="collapse" id="acc-22-i9xpp-trigger-0">
          <!---->
          <button aria-controls="acc-22-i9xpp-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-22-i9xpp-collapse-0" data-bs-toggle="collapse" type="button">
            <span class="btn__content">
              Static
              <span aria-hidden="true" class="rotate-up">
                <icon-component icon="only-icon"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-hidden="true" aria-labelledby="acc-22-i9xpp-trigger-0" class="accordion-collapse collapse" hidden="" id="acc-22-i9xpp-collapse-0" inert="" role="region" style="overflow: hidden; transition: height 0.35s ease; display: none; height: 0px;">
        <div class="accordion-body">
          Content
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders static icon with no toggle switch: static icon no switch 1`] = `
<accordion-container icon="icon-static">
  <div class="accordion" id="acc-7-pduxy">
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-7-pduxy-header-0">
        <button-component aria-controls="acc-7-pduxy-collapse-0" aria-expanded="false" data-bs-target="#acc-7-pduxy-collapse-0" data-bs-toggle="collapse" id="acc-7-pduxy-trigger-0">
          <!---->
          <button aria-controls="acc-7-pduxy-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-7-pduxy-collapse-0" data-bs-toggle="collapse" type="button">
            <span class="btn__content">
              Header 1
              <span aria-hidden="true" class="rotate-up">
                <icon-component icon="icon-static"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-hidden="true" aria-labelledby="acc-7-pduxy-trigger-0" class="accordion-collapse collapse" hidden="" id="acc-7-pduxy-collapse-0" inert="" role="region" style="overflow: hidden; transition: height 0.35s ease; display: none; height: 0px;">
        <div class="accordion-body">
          Content 1
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-7-pduxy-header-1">
        <button-component aria-controls="acc-7-pduxy-collapse-1" aria-expanded="false" data-bs-target="#acc-7-pduxy-collapse-1" data-bs-toggle="collapse" id="acc-7-pduxy-trigger-1">
          <!---->
          <button aria-controls="acc-7-pduxy-collapse-1" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-7-pduxy-collapse-1" data-bs-toggle="collapse" type="button">
            <span class="btn__content">
              Header 2
              <span aria-hidden="true" class="rotate-up">
                <icon-component icon="icon-static"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-hidden="true" aria-labelledby="acc-7-pduxy-trigger-1" class="accordion-collapse collapse" hidden="" id="acc-7-pduxy-collapse-1" inert="" role="region" style="overflow: hidden; transition: height 0.35s ease; display: none; height: 0px;">
        <div class="accordion-body">
          Content 2
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container renders with given data and matches snapshot 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="accordion" id="acc-1-ax6uz">
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-1-ax6uz-header-0">
        <button-component aria-controls="acc-1-ax6uz-collapse-0" aria-expanded="false" data-bs-target="#acc-1-ax6uz-collapse-0" data-bs-toggle="collapse" id="acc-1-ax6uz-trigger-0">
          <!---->
          <button aria-controls="acc-1-ax6uz-collapse-0" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-1-ax6uz-collapse-0" data-bs-toggle="collapse" type="button">
            <span class="btn__content">
              Header 1
              <span aria-hidden="true" class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-hidden="true" aria-labelledby="acc-1-ax6uz-trigger-0" class="accordion-collapse collapse" hidden="" id="acc-1-ax6uz-collapse-0" inert="" role="region" style="overflow: hidden; transition: height 0.35s ease; display: none; height: 0px;">
        <div class="accordion-body">
          Content 1
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-1-ax6uz-header-1">
        <button-component aria-controls="acc-1-ax6uz-collapse-1" aria-expanded="false" data-bs-target="#acc-1-ax6uz-collapse-1" data-bs-toggle="collapse" id="acc-1-ax6uz-trigger-1">
          <!---->
          <button aria-controls="acc-1-ax6uz-collapse-1" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-1-ax6uz-collapse-1" data-bs-toggle="collapse" type="button">
            <span class="btn__content">
              Header 2
              <span aria-hidden="true" class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-hidden="true" aria-labelledby="acc-1-ax6uz-trigger-1" class="accordion-collapse collapse" hidden="" id="acc-1-ax6uz-collapse-1" inert="" role="region" style="overflow: hidden; transition: height 0.35s ease; display: none; height: 0px;">
        <div class="accordion-body">
          Content 2
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;

exports[`accordion-container toggles accordion via click and matches snapshot: click toggle first open 1`] = `
<accordion-container icon="fas fa-angle-down">
  <div class="accordion" id="acc-3-q3h43">
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-3-q3h43-header-0">
        <button-component aria-controls="acc-3-q3h43-collapse-0" aria-expanded="true" data-bs-target="#acc-3-q3h43-collapse-0" data-bs-toggle="collapse" id="acc-3-q3h43-trigger-0">
          <!---->
          <button aria-controls="acc-3-q3h43-collapse-0" aria-expanded="true" aria-label="Button" class="accordion-button btn" data-bs-target="#acc-3-q3h43-collapse-0" data-bs-toggle="collapse" type="button">
            <span class="btn__content">
              Header 1
              <span aria-hidden="true" class="rotate-down">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-labelledby="acc-3-q3h43-trigger-0" class="accordion-collapse collapse" id="acc-3-q3h43-collapse-0" role="region" style="overflow: hidden; transition: height 0.35s ease; display: block; height: auto;">
        <div class="accordion-body">
          Content 1
        </div>
      </div>
    </div>
    <div class="accordion-item">
      <h2 class="accordion-header" id="acc-3-q3h43-header-1">
        <button-component aria-controls="acc-3-q3h43-collapse-1" aria-expanded="false" data-bs-target="#acc-3-q3h43-collapse-1" data-bs-toggle="collapse" id="acc-3-q3h43-trigger-1">
          <!---->
          <button aria-controls="acc-3-q3h43-collapse-1" aria-expanded="false" aria-label="Button" class="accordion-button btn collapsed" data-bs-target="#acc-3-q3h43-collapse-1" data-bs-toggle="collapse" type="button">
            <span class="btn__content">
              Header 2
              <span aria-hidden="true" class="rotate-up">
                <icon-component icon="fas fa-angle-down"></icon-component>
              </span>
            </span>
          </button>
        </button-component>
      </h2>
      <div aria-hidden="true" aria-labelledby="acc-3-q3h43-trigger-1" class="accordion-collapse collapse" hidden="" id="acc-3-q3h43-collapse-1" inert="" role="region" style="overflow: hidden; transition: height 0.35s ease; display: none; height: 0px;">
        <div class="accordion-body">
          Content 2
        </div>
      </div>
    </div>
  </div>
</accordion-container>
`;
